--- a/partials/merchantcenter.html
+++ b/partials/merchantcenter.html
@@ -14,7 +14,7 @@
         <hr>
         <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/registration"><h3 ng-if="cur=='registration'" style="color: #DA4405;"><b>Registration</b></h3><h3 ng-if="cur!='registration'"><b>Registration</b></h3></a>
         <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/login"><p ng-if="cur=='login'" style="color: #DA4405;">Login</p><p ng-if="cur!='login'">Login</p></a>
-        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/navigation">Navigation</a>
+        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/navigation"><p ng-if="cur=='navigation'" style="color: #DA4405;">Navigation</p><p ng-if="cur!='navigation'">Navigation</p></a>
         <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/dashboard">Dashboard</a>
         <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/createtransaction">Orders - Create </a>
         <!-- <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/transactionoperations">Orders - Operation </a> -->
