--- a/partials/integration/generaldescription.html
+++ b/partials/integration/generaldescription.html
@@ -6,7 +6,7 @@
 	<div class="col-md-10">
 		<h1>Easy code, easy pay<br></h1>
 		<br>
-		<h2>Our payment solution for your needs</h2>
+		<h3>Our payment solution for your needs:</h3>
 		<p>Accept online payments effortlessly with the Concardis Payengine tailored for small, medium and large merchants. Our complete solution supports all common national and international payment methods and offers a wide range of additional services such as fraud prevention and one-click payments. Integrating the Concardis Payengine is fast, easy and hassle-free. With just a few clicks you can integrate all common payment options into your online shop. The Concardis Payengine supports almost all common platform systems, including Oxid, Shopware, Magento, WordPress E-Commerce and many, many more. In addition, you can design your own individual payment checkout form. Due to its responsive design the Concardis Payengine adapts to different screen sizes, so your customers can view it on their tablets, smartphones and desktop computers.</p>
 		<br>
 		<h3>Your benefits at a glance:</h3>
