--- a/partials/integration/generaldescription.html
+++ b/partials/integration/generaldescription.html
@@ -3,7 +3,10 @@
     Your browser does not support the video tag.
 </video>
 <div class="row">
-	<div class="col-md-10">
+	<div class="col-md-1">
+	</div>
+	<div class="col-md-9">
+		<br>
 		<h1>Easy code, easy pay<br></h1>
 		<br>
 		<h3>Our payment solution for your needs:</h3>
