--- a/partials/integration/preauth.html
+++ b/partials/integration/preauth.html
@@ -1,1 +1,86 @@
-<h1>preauth</h1>
+<div class="row">
+	<div class="col-md-7">
+		<h1>{{endpointName}}</h1>
+		<br>
+		<p style="white-space: pre-line;">{{endpoint.description}}<p>
+		<br>
+		<hr>
+		<h3>Responses</h3>
+		<br>
+		<div class="row">
+			<div class="col-md-1">
+			</div>
+			<div class="col-md-10">
+				<div style="background-color: rgba(0, 170, 19, 0.1);">
+					<br>
+					<p style="color:rgb(0, 170, 19);">&nbsp &nbsp &nbsp<b>&nbsp 200</b>  {{endpoint.responses[200]}}</p>
+					<br>
+				</div>
+				<br>
+				<div style="background-color: rgba(229, 57, 53, 0.1);">
+					<br>
+					<p style="color: rgba(229, 57, 53);">&nbsp &nbsp &nbsp<b>&nbsp 403</b> &nbsp The health endpoint is disabled via configuration.</p>
+					<br>
+				</div>
+			</div>
+			<div class="col-md-1">
+			</div>
+		</div>
+		<br>
+		<h3>Javascript (HttpRequest)</h3>
+		<div class="row">
+			<div class="col-md-1">
+			</div>
+			<div class="col-md-10">
+				<br>
+	<code style="display:block;white-space:pre-wrap">
+	var xhr = new XMLHttpRequest();
+	var url = "https://apitest.payengine.de/v1/health"; //Payengine API Health Endpoint 
+	xhr.open("POST", url, true);    //GET request
+	xhr.setRequestHeader("Content-Type", "application/json"); //Content-Type: Json
+	xhr.setRequestHeader("Authorization","Basic  "); //Authorization in base64
+	xhr.send();
+	</code>
+			</div>
+			<div class="col-md-1">
+			</div>
+		</div>
+	</div>
+	<div class="col-md-5" style="background-color: #3e4855">
+		<div class="row">
+			<div class="col-md-1">
+			</div>
+			<div class="col-md-10">
+				<br>
+				<br>
+				<h2 style="color:white;"><a class="btn btn-success" type="button" style="padding-left: 15px; padding-right: 15px;">{{method}}</a>{{endpointName}}</h2>
+				<br>
+				<br>
+				<h3 style="color:white;">Response Samples</h3>
+				<h2 style="color:#2ecc71;">200</h2>
+				<br>
+				<div class="row" style="background-color:#171e21;">
+					<br>
+					<div class="col-md-1">
+					</div>
+					<div class="col-md-10">
+						<p style="color:white;">application/json</p>
+						<hr>
+						<p style="color:white;">{</p>
+						<p style="color:#a0fbaa; display:inline;">&nbsp  &nbsp  &nbsp  &nbsp "systemHealth"</p><p style="color:white; display:inline;">:</p><p style="color:#a0fbaa; display:inline;"> "GOOD"</p>
+						<p style="color:white;">}</p>
+						<br>
+					</div>
+					<div class="col-md-1">
+					</div>
+					<br>
+				</div>
+				<br>
+				<br>
+				<br>
+			</div>
+			<div class="col-md-1">
+			</div>
+		</div>
+	</div>
+</div>
