--- a/partials/merchantcenter.html
+++ b/partials/merchantcenter.html
@@ -1,15 +1,15 @@
 <div class="row" >
     <hr>
-    <div ng-init="menu=true;" class="col-md-2 btn-group-vertical" style="background-color: #DCDCDC !important;">
-        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/registration" style="background-color: #DCDCDC !important;"><h3 ng-if="cur=='registration'" style="color: #DA4405;"><b>Registration</b></h3><h3 ng-if="cur!='registration'"><b>Registration</b></h3></a>
-        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/login" style="background-color: #DCDCDC !important;"><p ng-if="cur=='login'" style="color: #DA4405;">Login</p><p ng-if="cur!='login'">Login</p></a>
-        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/navigation" style="background-color: #DCDCDC !important;"><p ng-if="cur=='navigation'" style="color: #DA4405;">Navigation</p><p ng-if="cur!='navigation'">Navigation</p></a>
-        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/dashboard" style="background-color: #DCDCDC !important;">Dashboard</a>
-        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/createtransaction" style="background-color: #DCDCDC !important;">Orders - Create </a>
+    <div ng-init="menu=true;" class="col-md-2 btn-group-vertical" >
+        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/registration" ><h3 ng-if="cur=='registration'" style="color: #DA4405;"><b>Registration</b></h3><h3 ng-if="cur!='registration'"><b>Registration</b></h3></a>
+        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/login" ><p ng-if="cur=='login'" style="color: #DA4405;">Login</p><p ng-if="cur!='login'">Login</p></a>
+        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/navigation" ><p ng-if="cur=='navigation'" style="color: #DA4405;">Navigation</p><p ng-if="cur!='navigation'">Navigation</p></a>
+        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/dashboard" >Dashboard</a>
+        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/createtransaction" >Orders - Create </a>
         <!-- <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/transactionoperations">Orders - Operation </a> -->
-        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/errortransaction" style="background-color: #DCDCDC !important;">Orders - Errors </a>
-        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/currencies" style="background-color: #DCDCDC !important;"> Currencies</a>
-        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/settlement" style="background-color: #DCDCDC !important;">Settlements</a>
+        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/errortransaction" >Orders - Errors </a>
+        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/currencies" > Currencies</a>
+        <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/settlement" >Settlements</a>
         <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/customer">Customers</a>
         <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/createcustomer">Manage customers</a>
         <a type="button" ng-show="menu" class="btn btn-light text-left" href="/merchantcenter/myaccount">My Account</a>
